--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyBLLJgf91sv8imm6fi5RZ_iKaC_Ou1Cw0c" />
 
         <activity
             android:name=".MapsActivity"
