--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,10 @@
             android:name=".MapsActivity">
         </activity>
 
+        <activity
+            android:name=".ImpressumActivity">
+        </activity>
+
 
     </application>
     <uses-permission android:name="android.permission.INTERNET" />
