--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,15 +41,18 @@
         </activity>
 
         <activity
-            android:name=".LocationActivity">
+            android:name=".LocationActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
 
         <activity
-            android:name=".MapsActivity">
+            android:name=".MapsActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
 
         <activity
-            android:name=".ImpressumActivity">
+            android:name=".ImpressumActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
         </activity>
 
 
